fix styling on code blocks to allow horizonal scrollbar

--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -417,11 +417,10 @@ tt.docutils.literal {
   horizontal scrollbar.
 */
 pre, .literal-block, .code {
-  display: inline-block;
-  width: 83ch;
-  margin: 0.5em 0rem 0.5em 0rem;
+  max-width: 83ch;
   overflow-x: auto;
   overflow-y: hidden;
+  margin: 0.5em 0rem 0.5em 0rem;
   padding: 0.5em 0 0.5em 1em;
   border-bottom: 1px solid #cacfcf;
   border-left: 2px solid #8fa39f;
